Add backup/restore instructions and resources

--- a/rbac/a8s-instance-user-role.yaml
+++ b/rbac/a8s-instance-user-role.yaml
@@ -7,8 +7,11 @@ metadata:
 rules:
 - apiGroups:
   - postgresql.anynines.com
+  - backups.anynines.com
   resources:
   - postgresqls
+  - backups
+  - recoveries
   verbs:
   - list
   - create
