--- a/deployment/demo-app-secret.yaml
+++ b/deployment/demo-app-secret.yaml
@@ -6,7 +6,7 @@ type: Opaque
 data:
   host: ZGVtby1wZy1jbHVzdGVyLW1hc3Rlci5kZWZhdWx0LnN2Yy5jbHVzdGVyLmxvY2Fs
   port: NTQzMg==
-  dbname: cG9zdGdyZXM=
+  dbname: ZGVtbw==
   username: cG9zdGdyZXM=
   password: YUpIR3dTOGZ3RDVpb1pxTE9jV3l4dk1yS29qR2RJT3BRZ3FaaEl2alJ2Nm9RMGN0bTZGNGxJSUJzbU14M0I1Rg==
   sslmode: cmVxdWlyZQ==
