--- a/deployment/demo-app-deployment.yaml
+++ b/deployment/demo-app-deployment.yaml
@@ -25,30 +25,21 @@ spec:
             - name: "POSTGRESQL_HOST"
               valueFrom:
                 secretKeyRef:
-                  name: demo-app-binding
-                  key: host
-            - name: "POSTGRESQL_PORT"
-              valueFrom:
-                secretKeyRef:
-                  name: demo-app-binding
-                  key: port
-            - name: "POSTGRESQL_DATABASE"
-              valueFrom:
-                secretKeyRef:
-                  name: demo-app-binding
-                  key: dbname
+                  name: sb-sample-service-binding
+                  key: instance_service
             - name: "POSTGRESQL_USERNAME"
               valueFrom:
                 secretKeyRef:
-                  name: demo-app-binding
+                  name: sb-sample-service-binding
                   key: username
             - name: "POSTGRESQL_PASSWORD"
               valueFrom:
                 secretKeyRef:
-                  name: demo-app-binding
+                  name: sb-sample-service-binding
                   key: password
+            - name: "POSTGRESQL_PORT"
+              value: "5432"
+            - name: "POSTGRESQL_DATABASE"
+              value: "demo"
             - name: "POSTGRESQL_SSLMODE"
-              valueFrom:
-                secretKeyRef:
-                  name: demo-app-binding
-                  key: sslmode
+              value: "require"
