--- a/deployment/a8s-service-binding-controller.yaml
+++ b/deployment/a8s-service-binding-controller.yaml
@@ -307,6 +307,9 @@ spec:
       labels:
         control-plane: controller-manager
         service-binding-controller: "true"
+      annotations:
+          prometheus.io/port: "8443"
+          prometheus.io/scrape: "true"
     spec:
       containers:
       - args:
