--- a/deployment/cluster-operators.yaml
+++ b/deployment/cluster-operators.yaml
@@ -356,6 +356,9 @@ spec:
     metadata:
       labels:
         control-plane: controller-manager
+      annotations:
+          prometheus.io/port: "8443"
+          prometheus.io/scrape: "true"
     spec:
       containers:
       - args:
