Overhaul the a8s Demo
* Update the a8s Demo to include the a8s-deployment repository as a git
  submodule
* Update Logging section as we are using OpenSearch instead of
  Elasticsearch and Kibana
* Update images and description for Metrics section as the Grafana
  dashboard has slightly changed
* Add Master failover demo
* Add PostgreSQL extensions demo
* Add PostgreSQL configuration demo

--- a/demo-app/demo-app-deployment.yaml
+++ b/demo-app/demo-app-deployment.yaml
@@ -40,6 +40,6 @@ spec:
             - name: "POSTGRESQL_PORT"
               value: "5432"
             - name: "POSTGRESQL_DATABASE"
-              value: "demo"
+              value: "a9s_apps_default_db"
             - name: "POSTGRESQL_SSLMODE"
               value: "require"
