--- a/demo-postgresql-app/kustomization.yaml
+++ b/demo-postgresql-app/kustomization.yaml
@@ -1,3 +1,3 @@
 resources:
-- demo-s3-app-deployment.yaml
-- demo-s3-app-service.yaml
+- demo-postgresql-app-deployment.yaml
+- demo-postgresql-app-service.yaml
